--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,41 +13,10 @@
         tools:layout_editor_absoluteX="-53dp"
         tools:layout_editor_absoluteY="0dp">
 
-        <CheckBox
-            android:id="@+id/passwordcheckBox"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40sp"
-            android:text="Set Password" />
-
-        <LinearLayout
-            android:id="@+id/psdlinearlayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40sp"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <EditText
-                android:id="@+id/passwordBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="password..."
-                android:inputType="textPassword" />
-
-            <Button
-                android:id="@+id/passwordbtnbox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Set" />
-        </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="100sp"
             android:layout_marginBottom="40sp"
             android:orientation="horizontal">
 
