--- a/app/src/main/res/layout/activity_messaging.xml
+++ b/app/src/main/res/layout/activity_messaging.xml
@@ -75,7 +75,8 @@
                 android:id="@+id/sendbuttonnbox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Send" />
+                android:text="Send"
+                style="@style/Widget.AppCompat.Button.Colored"/>
         </LinearLayout>
 
     </LinearLayout>
