--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -12,6 +12,27 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10sp"
+            android:fontFamily="sans-serif-black"
+            android:text="Signup Form!"
+            android:textAlignment="center"
+            android:textColor="#1B1919"
+            android:textSize="40sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100sp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="It's quick and easy."
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
         <EditText
             android:id="@+id/register_email"
             android:layout_width="match_parent"
@@ -32,15 +53,19 @@
             android:layout_marginBottom="60sp"
             android:ems="10"
             android:hint="Password..."
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            />
 
         <Button
             android:id="@+id/signup_button"
             android:layout_width="214dp"
             android:layout_height="57dp"
+            android:layout_marginBottom="200sp"
             android:gravity="center"
             android:hint="Password..."
-            android:text="Sign Up" />
+            android:text="Sign Up"
+            style="@style/Widget.AppCompat.Button.Colored"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
