--- a/app/src/main/res/layout/activity_lobby.xml
+++ b/app/src/main/res/layout/activity_lobby.xml
@@ -10,6 +10,7 @@
         android:id="@+id/status_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-black"
         android:text="Discovery Status"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
