--- a/app/src/main/res/layout/activity_login_activity.xml
+++ b/app/src/main/res/layout/activity_login_activity.xml
@@ -12,6 +12,27 @@
         android:gravity="center"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10sp"
+            android:fontFamily="sans-serif-black"
+            android:text="Hello There!"
+            android:textAlignment="center"
+            android:textColor="#1B1919"
+            android:textSize="40sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="80sp"
+            android:fontFamily="sans-serif-condensed"
+            android:text="Welcome back! Login with your credentials."
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
         <EditText
             android:id="@+id/user_id"
             android:layout_width="match_parent"
@@ -39,23 +60,28 @@
             android:layout_width="185dp"
             android:layout_height="47dp"
             android:layout_marginBottom="50sp"
-            android:text="Login" />
+            android:text="Login"
+            style="@style/Widget.AppCompat.Button.Colored"/>
 
         <TextView
             android:id="@+id/register_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10sp"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="center"
-            android:text="Register or Signup !"
+            android:text="Register or Signup!"
+            android:textColor="#232020"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/forgotpassBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
             android:gravity="center"
             android:text="Forgot Password?"
+            android:textColor="#1C1A1A"
             android:textSize="18sp" />
     </LinearLayout>
 
