--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -25,7 +25,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40sp"
                 android:layout_marginEnd="40sp"
+                android:fontFamily="sans-serif-black"
                 android:text="History"
+                android:textColor="#322C2C"
                 android:textSize="36sp" />
 
             <Button
@@ -34,7 +36,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="40sp"
                 android:layout_marginEnd="40sp"
-                android:text="Clear All" />
+                android:text="Clear All"
+                style="@style/Widget.AppCompat.Button.Colored"/>
 
         </LinearLayout>
 
